--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>arocksworld</title>
+    <title>Arock - Weolcome</title>
     <link rel="shortcut icon" href="https://arocksworld.com/static/fav/android-chrome.png" type="image/x-icon">
   </head>
   <body>
